--- a/public/ds-book-r/p04-01-unsupervised-learning.html
+++ b/public/ds-book-r/p04-01-unsupervised-learning.html
@@ -267,7 +267,7 @@ ul.task-list li input[type="checkbox"] {
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p03-08-xgboost.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">23</span>&nbsp; <span class="chapter-title">Extreme Gradient Boosting</span></span></a>
+ <span class="menu-text"><span class="chapter-number">23</span>&nbsp; <span class="chapter-title">XGBoost &amp; LightGBM</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
@@ -665,14 +665,15 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<p>Khác với bài toán phân loại(classification), khi ta có 1 tập dữ liệu với giá trị phân loại của từng quan sát <span class="math inline">\((x^{(i)}, y^{(i)})\)</span> và mục tiêu là xây dựng hàm dự báo giúp phân loại <span class="math inline">\(y^{(i)}\)</span>, bài toán <em>unsupersived learning</em> không có trước hàm mục tiêu. Trong bài toán này, từ tập dữ liệu cho trước, ta phải tìm ra cấu trúc dữ liệu tồn tại trong dữ liệu.</p>
+<p>Khác với bài toán phân loại (<code>classification</code>), khi ta có 1 tập dữ liệu với giá trị phân loại của từng quan sát <span class="math inline">\((x^{(i)}, y^{(i)})\)</span> và mục tiêu là xây dựng hàm dự báo giúp phân loại <span class="math inline">\(y^{(i)}\)</span>, bài toán <em>unsupersived learning</em> không có trước hàm mục tiêu. Trong bài toán này, từ tập dữ liệu cho trước, ta phải tìm ra cấu trúc dữ liệu tồn tại trong dữ liệu.</p>
 <p>Ứng dụng của <code>unsupervised learning</code> như sau:</p>
 <ul>
-<li>Phân nhóm dữ liệu (<code>clustering</code>): Phân chia dữ liệu thành các nhóm sao cho độ tương đồng giữa các nhóm là giống nhau nhất. Ứng dụng của thuật toán này giúp cho việc phân nhóm khách hàng (<code>customer segmentation</code>), phân tích cấu trúc thị trường (<code>market structure</code>). Thuật toán ứng dụng trong nhóm này bao gồm <code>hierachical clustering</code> và <code>kmeans clustering</code>.</li>
-<li>Tìm kiếm quan hệ giao dịch (<code>market basket analysis</code>), phân tích cấu trúc và mối liên hệ giữa các sản phẩm có quan hệ bổ trợ cho nhau với thuật toán <code>association rules</code></li>
-<li>Giảm biến dữ liệu với <code>Pricipal Component Analysis</code>, giúp giảm cấu trúc dữ liệu nhiều chiều.</li>
-<li>Phân tích quan hệ ẩn trong dữ liệu <code>Factor Analysis</code>, tìm kiềm các cấu trúc ẩn trong dữ liệu, được ứng dụng đặc biệt nhiều trong phân tích bảng hỏi (questionaire)</li>
+<li><strong>Phân nhóm dữ liệu</strong> (<code>clustering</code>): Phân chia dữ liệu thành các nhóm sao cho độ tương đồng giữa các nhóm là giống nhau nhất. Ứng dụng của thuật toán này giúp cho việc phân nhóm khách hàng (<code>customer segmentation</code>), phân tích cấu trúc thị trường (<code>market structure</code>). Thuật toán ứng dụng trong nhóm này bao gồm <code>hierachical clustering</code> và <code>kmeans clustering</code>.</li>
+<li><strong>Tìm kiếm quan hệ giao dịch</strong> (<code>market basket analysis</code>), phân tích cấu trúc và mối liên hệ giữa các sản phẩm có quan hệ bổ trợ cho nhau với thuật toán <code>association rules</code></li>
+<li><strong>Giảm biến dữ liệu</strong> với <code>Pricipal Component Analysis</code>, giúp giảm cấu trúc dữ liệu nhiều chiều.</li>
+<li><strong>Phân tích quan hệ ẩn</strong> trong dữ liệu <code>Factor Analysis</code>, tìm kiềm các cấu trúc ẩn trong dữ liệu, được ứng dụng đặc biệt nhiều trong phân tích bảng hỏi (<code>questionaire</code>)</li>
 </ul>
+<p>Các bài toán với <code>unsupervised learning</code> đòi hỏi phải có sự sáng tạo trong việc diễn giải kết quả mô hình để có thể phù hợp với nhu cầu thực tế.</p>
 
 
 
