--- a/public/ds-book-r/p07-16-retention-analysis.html
+++ b/public/ds-book-r/p07-16-retention-analysis.html
@@ -299,7 +299,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p03-08-xgboost.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">23</span>&nbsp; <span class="chapter-title">Extreme Gradient Boosting</span></span></a>
+ <span class="menu-text"><span class="chapter-number">23</span>&nbsp; <span class="chapter-title">XGBoost &amp; LightGBM</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
@@ -931,7 +931,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <section id="tài-liệu-tham-khảo" class="level2" data-number="59.3">
 <h2 data-number="59.3" class="anchored" data-anchor-id="tài-liệu-tham-khảo"><span class="header-section-number">59.3</span> Tài liệu tham khảo</h2>
 <ul>
-<li>https://neilpatel.com/blog/cohort-analysis-google-analytics/</li>
+<li><a href="">https://neilpatel.com/blog/cohort-analysis-google-analytics/</a></li>
 </ul>
 
 
