--- a/public/ds-book-r/p02-04-ngu-phap-bieu-do-ggplot2.html
+++ b/public/ds-book-r/p02-04-ngu-phap-bieu-do-ggplot2.html
@@ -299,7 +299,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./p03-08-xgboost.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">23</span>&nbsp; <span class="chapter-title">Extreme Gradient Boosting</span></span></a>
+ <span class="menu-text"><span class="chapter-number">23</span>&nbsp; <span class="chapter-title">XGBoost &amp; LightGBM</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
@@ -676,22 +676,26 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">Table of contents</h2>
+    <h2 id="toc-title">Mục lục</h2>
    
   <ul>
   <li><a href="#giới-thiệu" id="toc-giới-thiệu" class="nav-link active" data-scroll-target="#giới-thiệu"><span class="header-section-number">6.1</span> Giới thiệu</a></li>
   <li><a href="#xây-dựng-biểu-đồ" id="toc-xây-dựng-biểu-đồ" class="nav-link" data-scroll-target="#xây-dựng-biểu-đồ"><span class="header-section-number">6.2</span> Xây dựng biểu đồ</a>
-  <ul class="collapse">
+  <ul>
   <li><a href="#biểu-đồ-cơ-bản" id="toc-biểu-đồ-cơ-bản" class="nav-link" data-scroll-target="#biểu-đồ-cơ-bản"><span class="header-section-number">6.2.1</span> Biểu đồ cơ bản</a></li>
   <li><a href="#facet" id="toc-facet" class="nav-link" data-scroll-target="#facet"><span class="header-section-number">6.2.2</span> Facet</a></li>
   <li><a href="#thuộc-tính-hình-học---geom" id="toc-thuộc-tính-hình-học---geom" class="nav-link" data-scroll-target="#thuộc-tính-hình-học---geom"><span class="header-section-number">6.2.3</span> Thuộc tính hình học - geom</a></li>
   <li><a href="#tính-toán-thống-kê---statistical-transformations" id="toc-tính-toán-thống-kê---statistical-transformations" class="nav-link" data-scroll-target="#tính-toán-thống-kê---statistical-transformations"><span class="header-section-number">6.2.4</span> Tính toán thống kê - statistical transformations</a></li>
   <li><a href="#vị-trí-trong-biểu-đồ" id="toc-vị-trí-trong-biểu-đồ" class="nav-link" data-scroll-target="#vị-trí-trong-biểu-đồ"><span class="header-section-number">6.2.5</span> Vị trí trong biểu đồ</a></li>
   <li><a href="#hệ-trục-tọa-độ" id="toc-hệ-trục-tọa-độ" class="nav-link" data-scroll-target="#hệ-trục-tọa-độ"><span class="header-section-number">6.2.6</span> Hệ trục tọa độ</a></li>
-  <li><a href="#các-yếu-tố-khác" id="toc-các-yếu-tố-khác" class="nav-link" data-scroll-target="#các-yếu-tố-khác"><span class="header-section-number">6.2.7</span> Các yếu tố khác</a></li>
+  <li><a href="#các-yếu-tố-khác" id="toc-các-yếu-tố-khác" class="nav-link" data-scroll-target="#các-yếu-tố-khác"><span class="header-section-number">6.2.7</span> Các yếu tố khác</a>
+  <ul class="collapse">
+  <li><a href="#labs" id="toc-labs" class="nav-link" data-scroll-target="#labs"><span class="header-section-number">6.2.7.1</span> Labs</a></li>
+  <li><a href="#theme" id="toc-theme" class="nav-link" data-scroll-target="#theme"><span class="header-section-number">6.2.7.2</span> Theme</a></li>
+  </ul></li>
   </ul></li>
   <li><a href="#các-mẹo-với-ggplot2" id="toc-các-mẹo-với-ggplot2" class="nav-link" data-scroll-target="#các-mẹo-với-ggplot2"><span class="header-section-number">6.3</span> Các mẹo với ggplot2</a>
-  <ul class="collapse">
+  <ul>
   <li><a href="#đặt-global-option-cho-theme" id="toc-đặt-global-option-cho-theme" class="nav-link" data-scroll-target="#đặt-global-option-cho-theme"><span class="header-section-number">6.3.1</span> Đặt global option cho theme</a></li>
   <li><a href="#loại-bỏ-legend-trong-1-lớp" id="toc-loại-bỏ-legend-trong-1-lớp" class="nav-link" data-scroll-target="#loại-bỏ-legend-trong-1-lớp"><span class="header-section-number">6.3.2</span> Loại bỏ legend trong 1 lớp</a></li>
   <li><a href="#format-dữ-liệu-trong-biểu-đồ-với-scales" id="toc-format-dữ-liệu-trong-biểu-đồ-với-scales" class="nav-link" data-scroll-target="#format-dữ-liệu-trong-biểu-đồ-với-scales"><span class="header-section-number">6.3.3</span> Format dữ liệu trong biểu đồ với scales</a></li>
@@ -699,7 +703,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   <li><a href="#hiển-thị-text-biểu-đồ-ở-giữa-bar-chart" id="toc-hiển-thị-text-biểu-đồ-ở-giữa-bar-chart" class="nav-link" data-scroll-target="#hiển-thị-text-biểu-đồ-ở-giữa-bar-chart"><span class="header-section-number">6.3.5</span> Hiển thị text biểu đồ ở giữa bar chart</a></li>
   </ul></li>
   <li><a href="#các-package-bổ-trợ-cho-ggplot2" id="toc-các-package-bổ-trợ-cho-ggplot2" class="nav-link" data-scroll-target="#các-package-bổ-trợ-cho-ggplot2"><span class="header-section-number">6.4</span> Các package bổ trợ cho <code>ggplot2</code></a>
-  <ul class="collapse">
+  <ul>
   <li><a href="#kết-hợp-nhiều-biểu-đồ-với-patchwork" id="toc-kết-hợp-nhiều-biểu-đồ-với-patchwork" class="nav-link" data-scroll-target="#kết-hợp-nhiều-biểu-đồ-với-patchwork"><span class="header-section-number">6.4.1</span> Kết hợp nhiều biểu đồ với <code>patchwork</code></a></li>
   <li><a href="#sử-dụng-ggtext-để-hiển-thị-dạng-markdown" id="toc-sử-dụng-ggtext-để-hiển-thị-dạng-markdown" class="nav-link" data-scroll-target="#sử-dụng-ggtext-để-hiển-thị-dạng-markdown"><span class="header-section-number">6.4.2</span> Sử dụng <code>ggtext</code> để hiển thị dạng markdown</a></li>
   <li><a href="#highlight-biểu-đồ-với-gghighlight" id="toc-highlight-biểu-đồ-với-gghighlight" class="nav-link" data-scroll-target="#highlight-biểu-đồ-với-gghighlight"><span class="header-section-number">6.4.3</span> Highlight biểu đồ với <code>gghighlight</code></a></li>
