--- a/public/ds-book-r/p03-17-regularization.html
+++ b/public/ds-book-r/p03-17-regularization.html
@@ -698,7 +698,8 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   <li><a href="#stepwise-methods" id="toc-stepwise-methods" class="nav-link" data-scroll-target="#stepwise-methods"><span class="header-section-number">27.4.2</span> Stepwise methods</a></li>
   <li><a href="#ridge-lasso" id="toc-ridge-lasso" class="nav-link" data-scroll-target="#ridge-lasso"><span class="header-section-number">27.4.3</span> Ridge &amp; Lasso</a></li>
   </ul></li>
-  <li><a href="#tài-liệu-tham-khảo" id="toc-tài-liệu-tham-khảo" class="nav-link" data-scroll-target="#tài-liệu-tham-khảo"><span class="header-section-number">27.5</span> Tài liệu tham khảo</a></li>
+  <li><a href="#lưu-ý" id="toc-lưu-ý" class="nav-link" data-scroll-target="#lưu-ý"><span class="header-section-number">27.5</span> Lưu ý</a></li>
+  <li><a href="#tài-liệu-tham-khảo" id="toc-tài-liệu-tham-khảo" class="nav-link" data-scroll-target="#tài-liệu-tham-khảo"><span class="header-section-number">27.6</span> Tài liệu tham khảo</a></li>
   </ul>
 </nav>
     </div>
@@ -801,12 +802,17 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <li>Việc lựa chọn giá trị của <span class="math inline">\(\lambda\)</span> rất quan trọng với ridge regression</li>
 <li><code>Ridge regression</code> còn được gọi là <code>L2 regularization</code></li>
 </ul>
+<p><img src="Images/p03-17-l2-norm.png" class="img-fluid"></p>
 </section>
 <section id="lasso-regression" class="level3" data-number="27.3.2">
 <h3 data-number="27.3.2" class="anchored" data-anchor-id="lasso-regression"><span class="header-section-number">27.3.2</span> Lasso regression</h3>
 <p><code>Ridge regression</code> có nhược điểm là không đưa các giá trị ước lượng của biến về 0 mà chỉ tiệm cận 0. Lasso khắc phục nhược điểm đó bằng việc thay đổi hàm mục tiêu như sau:</p>
 <p><span class="math display">\[RSS + \alpha(\sum_{j=1}^p|\beta_j|)\]</span></p>
-<p><strong>Lưu ý</strong>: <code>Lassso regression</code> còn được gọi là <code>L1 regularization</code></p>
+<p><strong>Lưu ý</strong>: <code>Lassso regression</code> còn được gọi là <code>L1 regularization</code> hay <code>Hanhattan norm</code></p>
+<p><img src="Images/p03-07-l1-norm.png" class="img-fluid"></p>
+<center>
+<font size="4">§</font>
+</center>
 <p><strong>Cách tiếp cận khác của Ridge và Lasso</strong></p>
 <p>Mô hình Ridge và Lasso có thể được viết lại như sau:</p>
 <p>Minimize <span class="math inline">\(RSS\)</span>, subject to:</p>
@@ -1167,8 +1173,12 @@ lstat       -0.53752341</code></pre>
 </div>
 </section>
 </section>
-<section id="tài-liệu-tham-khảo" class="level2" data-number="27.5">
-<h2 data-number="27.5" class="anchored" data-anchor-id="tài-liệu-tham-khảo"><span class="header-section-number">27.5</span> Tài liệu tham khảo</h2>
+<section id="lưu-ý" class="level2" data-number="27.5">
+<h2 data-number="27.5" class="anchored" data-anchor-id="lưu-ý"><span class="header-section-number">27.5</span> Lưu ý</h2>
+<p>Các kỹ thuật về <code>regularization</code> với <code>L1</code>, <code>L2</code> được áp dụng rộng rãi trong các thuật toán như ols, logistic, neural network, vsm. Với họ thuật toán cây, việc <code>generalization</code> sẽ không áp dụng tương tự được mà sẽ sử dụng các tham số khác như số lần phân nhánh (n_split), số tầng cây tối đa (<code>max_depth</code>)…. Tuy nhiên, nguyên lý về <code>generalization</code> mới là thứ cần nắm vững khi đánh giá về mô hình. Các tham số chi tiết sẽ tùy thuộc vào từng thuật toán.</p>
+</section>
+<section id="tài-liệu-tham-khảo" class="level2" data-number="27.6">
+<h2 data-number="27.6" class="anchored" data-anchor-id="tài-liệu-tham-khảo"><span class="header-section-number">27.6</span> Tài liệu tham khảo</h2>
 <ul>
 <li>Chapter 6 - Linear model selection &amp; regularizaiton - Introduction to Statistical Learning</li>
 <li>http://www.sthda.com/english/articles/37-model-selection-essentials-in-r/153-penalized-regression-essentials-ridge-lasso-elastic-net/</li>
